--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <p><h3>Перелік основних команд:</h3></p>
 <ul>
-    <li>git config --global user.name </li>
+    <li>git config - global user.name </li>
     <li>git config - global user.email</li>
     <li>git init - створення пустого репозиторію</li>
     <li>git status - відображення статусу репозиторію</li>
